# neuro_package

./: README.txt  readme.txt
neuro/: CMakeLists.txt  package.xml
neuro/launch/: fake_turtlebot.launch  neuro_demo.launch  neuro_demo.launch~
neuro/src/: neuro_smach.py  neuro_smach.py~  neuro_smach_test1.py  pub_location.py  pub_recognize_goal.py
neurobotboth/: manifest.xml  urdf.rviz
neurobotboth/launch/: display.launch  gazebo.launch
neurobotboth/meshes/: base_leg.stl  base_link.stl  left_arm_Link_1.stl  left_arm_link_2.stl  left_arm_link_3.stl  left_arm_link_4.stl  left_arm_link_5.stl  left_arm_link_6.stl  right_arm_link_1.stl  right_arm_link_2.stl  right_arm_link_3.stl  right_arm_link_4.stl  right_arm_link_5.stl  right_arm_link_6.stl
neurobotboth/urdf/: neurobotboth.urdf  neurobotboth_nav.urdf  neurobotboth_nav_test.urdf  neuroboth_left.urdf
neurobotboth_moveit_config/: .setup_assistant  CMakeLists.txt  neurobotboth(cp).srdf  package.xml
neurobotboth_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  neurobotboth.srdf  neurobotboth.srdf~  ompl_planning.yaml
neurobotboth_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
neurobotboth_moveit_config/scripts/: neurobot_ik_right.py  neurobot_ik_right.py~
